@@ -33,7 +33,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -51,7 +50,7 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
         List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
                 .filter(draws -> draws.getStatus() == Status.WINNER || draws.getStatus() == Status.CONFIRM)
                 .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
                 .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
@@ -63,7 +62,7 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
         List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
                 .filter(draws -> draws.getStatus() == Status.WAITLIST)
                 .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
-                .collect(Collectors.toList());
+            .toList();
 
         return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
                 .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
@@ -75,7 +74,7 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
         List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
                 .filter(draws -> draws.getStatus() != Status.WAITLIST && draws.getStatus() != Status.NON_WINNER)
                 .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
-                .collect(Collectors.toList());
+            .toList();
 
         return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
                 .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
@@ -92,7 +91,7 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
 
                     return DrawsResponse.DrawsResponseByMembersDTO.of(draws, categoryName);
                 })
-                .collect(Collectors.toList());
+            .toList();
 
         return DrawsResponse.DrawsResponseByMembersListDTO.builder()
                 .drawsResponseByMembersList(drawsResponseByMembersDTOS)
